--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,16 +1,42 @@
+
+
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+.hero-l-content h1,
+.hero-l-content p {
+  word-break: break-word;
+}
+
+
+body, html{
     height: 100vh;
     width: 100%;
     overflow-x: hidden;
 }
 
 /* HERO SECTION */
+
+.hero-title {
+  font-size: 6vw !important;
+  line-height: 1.2;
+  max-width: 90%;
+}
+
+.hero-subtitle {
+  font-size: 2.5vw !important;
+  line-height: 1.2;
+  max-width: 90%;
+}
+
+.hero-btn {
+  font-size: 4vw;
+  padding: 1vw 3vw;
+}
 .hero {
   position: relative;
 }
@@ -491,7 +517,7 @@ body{
 
 /* Social Media Icons Styling */
 .social-media-icon-mobile{
-  display: none;
+  display: none !important;
 }
 .social-icons {
   font-size: 10px;
@@ -512,7 +538,22 @@ body{
 
 
 
+/* Optional: Limit how big text can get on large screens */
+@media (min-width: 992px) {
+  .hero-title {
+    font-size:4rem !important ;
+    max-width: 90%;
+  }
 
+  .hero-subtitle {
+    font-size: 1.5rem;
+  }
+
+  .hero-btn {
+    font-size: 1rem;
+    padding: 10px 20px;
+  }
+}
 
   /* FOR SMALLER SCREEN */
   @media (max-width: 991px) {
@@ -568,7 +609,7 @@ body{
  
   .hero-l-content h1{
     width: 70%;
-    font-size: 3rem;
+    /* font-size: 3rem; */
   }
 
   .hero-l-content p{
