--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/animation.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/IntersectionObserver/0.9.1/intersection-observer.js"></script>
 </head>
 
 
 <body>
   <header>
-    <div class="container-fluid vh-100 hero">
-      <div class="row">
-        <div class="container">
-          <div class="row">
+    <div class="container-fluid vh-100 hero overflow-hidden">
+      <div class="row h-100">
+        <div class="container h-100">
+          <div class="row h-100 align-items-center">
             <!-- Left Content -->
             <div class="col-12 col-md-8 hero-l">
-              <nav class="navbar navbar-expand-lg m-md-5">
-                <div class="container-fluid">
+              <nav class="navbar navbar-expand-lg px-3 px-md-5">
+                <div class="container-fluid px-0">
                   <a class="navbar-brand" href="#">Navbar</a>
                   <button
                     class="navbar-toggler"
@@ -35,8 +35,8 @@
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <div class="navbar-nav ms-auto">
+                      <a class="nav-link active" href="#">Home</a>
                       <a class="nav-link" href="#about">About</a>
                       <a class="nav-link" href="#books">Books</a>
                       <a class="nav-link" href="#blogs">Blogs</a>
@@ -45,24 +45,33 @@
                   </div>
                 </div>
               </nav>
-              <div class="m-5 hero-l-content text-start">
-                <h1 class="animate__animated animate__fadeInLeft"><%= hero.title %></h1>
-                <p class="animate__animated animate__fadeInUp">
+  
+              <div class="hero-l-content w-100 d-flex flex-column justify-content-center align-items-start px-3 px-md-5" style="height: 100%;">
+                <h1 class="hero-title animate__animated animate__fadeInLeft fw-bold">
+                  <%= hero.title %>
+                </h1>
+              
+                <p class="hero-subtitle animate__animated animate__fadeInUp">
                   <%= hero.subtitle %>
                 </p>
-                <button type="button" class="btn hero-btn animate__animated animate__fadeInUp">Read Sample Now</button>
-                <div class="social-media-icon-mobile justify-content-start ">
-                  <a href="#"><img src="img/facebook (1).png" class="icon" alt="Facebook"></a>
-                  <a href="#"><img src="img/youtube (1).png" class="icon" alt="YouTube"></a>
-                  <a href="#"><img src="img/instagram (1).png" class="icon" alt="Instagram"></a>
-                  <a href="#"><img src="img/gmail.png" class="icon" alt="Gmail"></a>
+              
+                <button type="button" class="btn hero-btn animate__animated animate__fadeInUp mt-3">
+                  Read Sample Now
+                </button>
+              
+                <div class="social-media-icon-mobile d-flex gap-3 mt-4">
+                  <a href="#"><img src="img/facebook (1).png" class="icon" alt="Facebook" /></a>
+                  <a href="#"><img src="img/youtube (1).png" class="icon" alt="YouTube" /></a>
+                  <a href="#"><img src="img/instagram (1).png" class="icon" alt="Instagram" /></a>
+                  <a href="#"><img src="img/gmail.png" class="icon" alt="Gmail" /></a>
                 </div>
               </div>
+              
             </div>
   
-            <!-- Right Content-->
-            <div class="col-md-4 hero-r slide d-none d-md-block">
-              <div class="social-media-icon justify-content-end align-items-center g-5 m-5">
+            <!-- Right Content -->
+            <div class="col-md-4 d-none d-md-flex hero-r justify-content-end">
+              <div class="social-media-icon d-flex flex-column align-items-end gap-3 m-4">
                 <a href="#"><img src="img/facebook (1).png" class="icon" alt="Facebook"></a>
                 <a href="#"><img src="img/youtube (1).png" class="icon" alt="YouTube"></a>
                 <a href="#"><img src="img/instagram (1).png" class="icon" alt="Instagram"></a>
@@ -74,6 +83,7 @@
       </div>
     </div>
   </header>
+  
   
   
 
