--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -608,12 +608,20 @@ body{
   
  
   .hero-l-content h1{
-    width: 70%;
-    /* font-size: 3rem; */
+    width: 90%;
+    text-align: center;
+    font-size: 10vw !important;
   }
 
   .hero-l-content p{
-    width: 70%;
+    width: 100% !important;
+    text-align: center;
+    font-size: 7vw !important;
+  }
+
+  .hero-btn{
+    align-self: center;
+
   }
   
   .social-media-icon-mobile{
